// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots widgets/Loader circular 1`] = `
<div
  className="MuiGrid-container-1"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <div
      className="MuiGrid-container-1 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-center-18 Loader-root-1"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader custom 1`] = `
<div
  className="MuiGrid-container-195"
>
  <div
    className="MuiGrid-item-196 MuiGrid-grid-xs-12-235"
  >
    <div
      className="MuiGrid-container-195 MuiGrid-align-items-xs-center-203 MuiGrid-justify-xs-center-212 Loader-root-1"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "color": "#9c27b0",
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={18.5}
            strokeWidth={7}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader linear 1`] = `
<div
  className="MuiGrid-container-98"
>
  <div
    className="MuiGrid-item-99 MuiGrid-grid-xs-12-138"
  >
    <div
      className="MuiGrid-container-98 MuiGrid-align-items-xs-center-106 MuiGrid-justify-xs-center-115 Loader-root-1"
    >
      <div
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary Loader-linear-3"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar2Indeterminate"
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-292 MuiGrid-spacing-xs-24-316"
    >
      <div
        className="MuiDrawer-docked-389"
      >
        <div
          className="MuiPaper-root-400 MuiPaper-elevation0-402 MuiDrawer-paper-390 MuiDrawer-paperAnchorLeft-391 MuiDrawer-paperAnchorDockedLeft-395"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root MuiList-padding SideMenu-root-2 Component-flexed-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-3"
            />
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-562 MuiGrid-spacing-xs-24-586"
    >
      <div
        className="MuiDrawer-docked-659"
      >
        <div
          className="MuiPaper-root-670 MuiPaper-elevation0-672 MuiDrawer-paper-660 MuiDrawer-paperAnchorLeft-661 MuiDrawer-paperAnchorDockedLeft-665"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root MuiList-padding SideMenu-root-2 Component-flexed-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-3"
            />
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-activeItem-10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7 SideMenu-listItemHidden-8"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7 SideMenu-listItemHidden-8"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7 SideMenu-listItemHidden-8"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Theme
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-427 MuiGrid-spacing-xs-24-451"
    >
      <div
        className="MuiDrawer-docked-524"
      >
        <div
          className="MuiPaper-root-535 MuiPaper-elevation0-537 MuiDrawer-paper-525 MuiDrawer-paperAnchorLeft-526 MuiDrawer-paperAnchorDockedLeft-530"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root MuiList-padding SideMenu-root-2 Component-flexed-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-3"
            />
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-activeItem-10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-988 MuiGrid-spacing-xs-24-1012"
    >
      <div
        className="MuiGrid-item-989 MuiGrid-grid-xs-12-1028"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-1"
        >
          <h2
            className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1085 MuiGrid-spacing-xs-24-1109"
    >
      <div
        className="MuiGrid-item-1086 MuiGrid-grid-xs-12-1125"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-1 Widget-featured-5"
        >
          <h2
            className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1182 MuiGrid-spacing-xs-24-1206"
    >
      <div
        className="MuiGrid-item-1183 MuiGrid-grid-xs-12-1222"
      >
        <div
          className="MuiGrid-container-1182 MuiGrid-spacing-xs-24-1206"
        >
          <div
            className="MuiGrid-item-1183 MuiGrid-grid-xs-6-1216"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-3 Widget-border-4 Widget-border-top-5"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1183 MuiGrid-grid-xs-6-1216"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-3 Widget-border-4 Widget-border-bottom-6"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1183 MuiGrid-grid-xs-6-1216"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-3 Widget-border-4 Component-customTopBorder-1 Widget-border-top-5"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1183 MuiGrid-grid-xs-6-1216"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-3 Widget-border-4 Component-customBotomBorder-2 Widget-border-bottom-6"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-697 MuiGrid-spacing-xs-24-721"
    >
      <div
        className="MuiGrid-item-698 MuiGrid-grid-xs-12-737"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-1"
        >
          <h2
            className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-794 MuiGrid-spacing-xs-24-818"
    >
      <div
        className="MuiGrid-item-795 MuiGrid-grid-xs-12-834"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-1 Widget-featured-5"
        >
          <h2
            className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-891 MuiGrid-spacing-xs-24-915"
    >
      <div
        className="MuiGrid-item-892 MuiGrid-grid-xs-12-931"
      >
        <div
          className="MuiGrid-container-891 MuiGrid-spacing-xs-24-915"
        >
          <div
            className="MuiGrid-item-892 MuiGrid-grid-xs-6-925"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-3 Widget-border-4 Widget-border-top-5"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-892 MuiGrid-grid-xs-6-925"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-3 Widget-border-4 Widget-border-bottom-6"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-892 MuiGrid-grid-xs-6-925"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-3 Widget-border-4 Component-customTopBorder-1 Widget-border-top-5"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-892 MuiGrid-grid-xs-6-925"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root-3 Widget-border-4 Component-customBotomBorder-2 Widget-border-bottom-6"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
